<resources>
    <string name="app_name">task el cedro</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="Registro">Registro</string>
    <string name="salir">Salir</string>
    <string name="empresa">Empresa</string>
    <string name="cliente">Cliente</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="formularioEmpresa">Ingresa los datos de la empresa</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="valor">Valor</string>
    <string name="ingresar">Ingresar</string>
    <string name="formulario">Ingresa tus datos</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="configuracion">Configuracion</string>
    <string name="info">Info</string>
    <string name="atras">Atras</string>
    <string name="buscar">Buscar</string>
    <string name="informacion">Informacion</string>
    <string name="botonbarop2">OP2</string>
    <string name="botonbarop3">OP3</string>
    <string name="Task_el_Cedro">Task El Cedro</string>
    <string name="abrir">abrir</string>
    <string name="cerrar">cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="naturandes">Agua Purifica NaturAndes</string>
    <string name="entrelagos">Agua Purifica Entrelagos</string>
    <string name="kaukari">Agua Purifica Kaukari</string>
    <string name="elcedro">Agua Purifica El Cedro</string>
    <string name="cantidad">Cantidad</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="opciones">Elige una opcion</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="btnsubirimagen">Subir Logo</string>
</resources>