<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".formularioEmpresa">

    <TextView
        android:id="@+id/formulario"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/formularioEmpresa" />

    <EditText
        android:id="@+id/campoNombreCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/campoDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="text" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/campoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <EditText
        android:id="@+id/campoValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="number" />

    <EditText
        android:id="@+id/campoUsuarioCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text" />

    <EditText
        android:id="@+id/campoContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="text" />

    <Button
        android:id="@+id/ingresarbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/Registro"
        android:onClick="camposFormularioEmpresa"
        android:text="@string/btn_ingresar" />

    <Button
        android:id="@+id/salirbtn"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/salir"
        android:onClick="paginaPrincipal"
        android:text="@string/salir" />
</LinearLayout>