<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmento_crud_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/opciones"
            android:textSize="24sp" />

        <!-- Tabla para mostrar información de la empresa -->
        <TableLayout
            android:id="@+id/tablaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stretchColumns="*">

            <!-- Aquí se agregarán filas dinámicamente para cada campo de la empresa -->

        </TableLayout>

        <!-- Botones para actualizar y eliminar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnactualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar" />

            <Button
                android:id="@+id/btneliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/eliminar" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>